// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`masterchain should deploy to the workchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD9Rd1f21h4jkjh1ZNxBw5DlUvPA8Yf9_X6WzPUYUUFvG07",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3823n,
      },
    ],
  },
]
`;

exports[`masterchain should deploy to the workchain from masterchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB4GR7QxoLczPfQReBFnohwnNAblXe-53Zyw_ZmpPRd99VZ",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`masterchain should deploy to the workchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB4GR7QxoLczPfQReBFnohwnNAblXe-53Zyw_ZmpPRd99VZ",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`masterchain should not deploy to the workchain from masterchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD9Rd1f21h4jkjh1ZNxBw5DlUvPA8Yf9_X6WzPUYUUFvG07",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 137,
        "errorMessage": "Masterchain support is not enabled for this contract",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004465706C6F79}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQD9Rd1f21h4jkjh1ZNxBw5DlUvPA8Yf9_X6WzPUYUUFvG07",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.989",
        },
      },
    ],
  },
]
`;
